@@ -3,6 +3,7 @@
 /pm_to_blib
 /META.yml
 /MYMETA.yml
+/MYMETA.json
 /Makefile.PL
 /Build
 /_build
@@ -11,7 +12,7 @@
 /cover_db
 /tmp/*
 /Debian-Apt-PM-*
-/cache/apt/apt-pm/*
+/cache/*
 /sharedstate/dh-make-pm/*
 /examples/web/CPAN/*
 
